--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -25,6 +25,12 @@
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
+  
+  <div class="field">
+    <%= form.label :age %>
+    <%= form.text_field :age %>
+  </div>
+      
 
   <div class="actions">
     <%= form.submit %>
